--- a/src/components/1.css
+++ b/src/components/1.css
@@ -27,6 +27,7 @@
 
 .rdtPicker .rdtTimeToggle {
   text-align: center;
+  display:none
 }
 
 .rdtPicker table {
@@ -56,19 +57,31 @@
 }
 .rdtPicker td.rdtToday {
   position: relative;
+  /* background-color: #3ba59a;
+  border-radius: 5px; */
+
 }
 .rdtPicker td.rdtToday:before {
   content: "";
   display: inline-block;
   border-left: 7px solid transparent;
-  border-bottom: 7px solid #3ba59a;
+  border-bottom: 7px solid #24665f;
   position: absolute;
   bottom: 4px;
   right: 4px;
+  /* background-color: #3ba59a; */
+}
+.rdtPicker td.rdtActive,
+.rdtPicker td.rdtActive:hover {
+  background-color: #3ba59a;
+  color: black;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
+
 .rdtPicker td.rdtActive.rdtToday:before {
-  /* border-bottom-color: #3ba59a; */
+  border-bottom-color: #3ba59a;
 }
 .rdtPicker td.rdtDisabled,
 .rdtPicker td.rdtDisabled:hover {
@@ -129,6 +142,7 @@
 .rdtPicker thead button {
   width: 100%;
   height: 100%;
+  
 }
 
 td.rdtMonth,
@@ -188,7 +202,9 @@ td.rdtYear {
 .rdtMilli input {
   width: 100%;
   font-size: 1.2em;
+
   margin-top: 37px;
+  
 }
 
 .rdtTime td {
