--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Jomhuria&display=swap");
 @import url("http://fonts.googleapis.com/earlyaccess/droidarabickufi.css");
+@import url("https://fonts.googleapis.com/earlyaccess/notonaskharabic.css");
+@font-face {
+  font-family: "Arabic";
+  src: local("Arabic"),
+    url(./assets/PDMS_Saleem_QuranFont_shipped.ttf) format("ttf");
+  /* other formats include: 'woff2', 'truetype, 'opentype',
+                            'embedded-opentype', and 'svg' */
+}
 
 .App {
   text-align: center;
@@ -97,7 +105,7 @@
       .arabic-name {
         text-align: center;
         h4 {
-          font-family: "Jomhuria", cursive;
+          font-family: "Arabic";
           font-size: 1rem;
           font-weight: 400;
         }
@@ -161,24 +169,27 @@
     flex-direction: column;
     padding: 1rem 1rem;
     gap: 1rem;
+    .arabic {
+      direction: rtl;
+      white-space: wrap;
+    }
+    .urdu {
+      font-family: "Noto Naskh Arabic";
+    }
+    #halfbold {
+      font-size: 1rem;
+      font-weight: 600;
+      margin: 1rem;
+    }
     .single-ayah {
       display: flex;
       width: auto;
       height: auto;
       border: 1px solid #22c1c3;
-      font-family: "Droid Arabic Kufi";
+      font-family: "Arabic";
       flex-direction: column;
       border-radius: 1rem;
       padding: 1rem 1rem;
-      .arabic {
-        direction: rtl;
-        white-space: wrap;
-      }
-      #halfbold {
-        font-size: 1rem;
-        font-weight: 600;
-        margin: 1rem;
-      }
     }
   }
   #bold {
