--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,17 @@
   flex-direction: column;
 }
 
+.wave {
+  transform: rotate(180deg);
+  left: 0;
+}
+
+.wave1 {
+  transform: rotate(180deg);
+  left: 0;
+  height: 45vh;
+}
+
 .prayers {
   display: flex;
   flex-direction: column;
@@ -26,6 +37,7 @@
     animation: gradient 15s ease infinite;
   }
   .prayers-heading {
+    margin-top: 1rem;
     display: flex;
     padding: 0rem 1.7rem;
     justify-content: space-between;
@@ -43,17 +55,15 @@
   flex: 1;
   flex-direction: column;
   .search {
-    background: linear-gradient(
-      286deg,
-      rgba(34, 193, 195, 1) 9%,
-      rgba(45, 164, 253, 1) 100%
-    );
     height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    position: absolute;
+    left: 0;
+    right: 0;
     input {
       width: 90%;
       margin: 0rem 0.5rem;
@@ -137,12 +147,15 @@
   display: flex;
   flex-direction: column;
   .headings {
-    background: rgb(34, 193, 195);
-    background: linear-gradient(
-      286deg,
-      rgba(34, 193, 195, 1) 9%,
-      rgba(45, 164, 253, 1) 100%
-    );
+    // background: rgb(34, 193, 195);
+    // background: linear-gradient(
+    //   286deg,
+    //   rgba(34, 193, 195, 1) 9%,
+    //   rgba(45, 164, 253, 1) 100%
+    // );
+    position: absolute;
+    left: 0;
+    right: 0;
     width: 100%;
     min-height: 20vh;
     display: flex;
