--- a/src/App.scss
+++ b/src/App.scss
@@ -147,12 +147,6 @@
   display: flex;
   flex-direction: column;
   .headings {
-    // background: rgb(34, 193, 195);
-    // background: linear-gradient(
-    //   286deg,
-    //   rgba(34, 193, 195, 1) 9%,
-    //   rgba(45, 164, 253, 1) 100%
-    // );
     position: absolute;
     left: 0;
     right: 0;
@@ -227,8 +221,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    .drop-down {
-      width: 8rem;
+    gap: 0.5rem;
+    .select {
+      width: 100%;
       height: 2.3rem;
       background-color: #22c1c3;
       margin: 1% 0%;
@@ -248,11 +243,10 @@
         color: gray;
       }
     }
-    .drop-down:focus {
+    select:focus {
       outline: none;
     }
   }
-
   .table-header {
     display: flex;
     justify-content: space-between;
