--- a/src/App.scss
+++ b/src/App.scss
@@ -77,9 +77,10 @@
       outline: none;
     }
   }
+
   .al-quran-surahs {
     margin-top: 1rem;
-    padding: 0rem 3rem;
+    padding: 0rem 2rem;
     margin-bottom: 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -137,6 +138,68 @@
       margin: 0;
     }
   }
+  .juz-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+}
+
+.juz-button {
+  max-width: 25rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 0.4rem;
+  p {
+    text-align: start;
+    font-weight: 400;
+  }
+  .button1 {
+    width: 23rem;
+    min-height: 6rem;
+    max-height: 6rem;
+    background-color: #fff;
+    border: 2px solid gray;
+    border-radius: 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-overflow: clip;
+    font-size: 1rem;
+    color: gray;
+    white-space: wrap;
+    padding: 0rem 0.5rem;
+    .surah-name {
+      text-align: start;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+    .arabic-name {
+      text-align: center;
+      h4 {
+        font-family: "Arabic";
+        font-size: 1rem;
+        font-weight: 400;
+      }
+      p {
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+  }
+  button:hover {
+    border: 2px solid #41c1c3;
+    color: #41c1c3;
+    #number {
+      background: #41c1c3;
+    }
+    background: transparent;
+  }
 }
 
 #islamic-date {
@@ -172,6 +235,28 @@
     .arabic {
       direction: rtl;
       white-space: wrap;
+    }
+    .urdu {
+      font-family: "Noto Naskh Arabic";
+    }
+    #halfbold {
+      font-size: 1rem;
+      font-weight: 600;
+      margin: 1rem;
+    }
+  }
+  .ayahs-juz {
+    display: flex;
+    justify-content: flex-start;
+    padding: 1rem 1rem;
+    gap: 1rem;
+    flex-wrap: wrap;
+    direction: rtl;
+    text-align: center;
+    flex-direction: column;
+    .arabic {
+      white-space: wrap;
+      width: fit-content;
     }
     .urdu {
       font-family: "Noto Naskh Arabic";
@@ -222,29 +307,36 @@
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
-    .select {
-      width: 100%;
-      height: 2.3rem;
-      background-color: #22c1c3;
-      margin: 1% 0%;
-      padding: 0% 1%;
-      font-size: 0.8rem;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 5px;
-      color: #fff;
-      border: none;
-      option {
-        cursor: pointer;
+    flex-wrap: wrap;
+    div {
+      display: flex;
+      align-items: center;
+      min-width: 10rem;
+      gap: 1rem;
+      .select {
+        width: 10rem;
+        height: 2.3rem;
+        background-color: #22c1c3;
+        margin: 1% 0%;
+        padding: 0% 1%;
         font-size: 0.8rem;
-        font-weight: 400;
-        width: 100%;
-        background-color: #fff;
-        color: gray;
+        font-weight: bold;
+        cursor: pointer;
+        border-radius: 5px;
+        color: #fff;
+        border: none;
+        option {
+          cursor: pointer;
+          font-size: 0.8rem;
+          font-weight: 400;
+          width: 100%;
+          background-color: #fff;
+          color: gray;
+        }
       }
-    }
-    select:focus {
-      outline: none;
+      select:focus {
+        outline: none;
+      }
     }
   }
   .table-header {
@@ -273,5 +365,39 @@
       overflow: hidden;
       white-space: nowrap;
     }
+  }
+}
+
+.clock {
+  h1 {
+    font-size: 3rem;
+    color: #22c1c3;
+  }
+  h2 {
+    font-size: 1.9rem;
+    color: #fec265;
+  }
+  h4 {
+    font-size: 1rem;
+    span {
+      color: #22c1c3;
+    }
+  }
+}
+
+.surah-header {
+  display: flex;
+  flex-direction: column;
+  .headings {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    min-height: 20vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem 0rem;
+    gap: 1rem;
   }
 }
